syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GrpcProto";

package ds.service3;

message Request {
    string ProductName = 1;
}

message Response {
    string ProcessMessage = 1;
}

service Logistics {


	rpc serverStreamingLogi(Request) returns (stream Response) {}

    rpc clientStreamingLogi(stream Request) returns (Response) {}

    rpc biStreamingLogi(stream Request) returns (stream Response) {}
}